--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-12">
           <h1>CodeSpace</h1>
-          <p class="mb-5">Khu vực demo và thử nghiệp</p>
+          <p class="mb-5">Khu vực demo và thử nghiệm</p>
           <table class="table table-bordered">
             <thead class="thead-light">
               <tr>
