--- a/ajax-jquery/ex1/index.html
+++ b/ajax-jquery/ex1/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     />
 
-    <title>EX1</title>
+    <title>EX1 Ajax</title>
   </head>
   <body>
     <!-- Học fetch api - javascript -->
