--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
               <tr>
                 <td>
                   <button type="button" class="btn btn-light border">
-                    <a href="./ajax-jquery/ex1/">EX1</a>
+                    <a href="./ajax-jquery/ex1/">EX1 Ajax</a>
                   </button>
                   <button type="button" class="btn btn-light border">
-                    <a href="./ajax-jquery/ex2/">EX1</a>
+                    <a href="./ajax-jquery/ex2/">EX2 Fetch</a>
+                  </button>
+                  <button type="button" class="btn btn-light border">
+                    <a href="./ajax-jquery/ex3/">EX3 XMLHttprequest</a>
                   </button>
                 </td>
                 <td>x</td>
