--- a/ajax-jquery/ex3/index.html
+++ b/ajax-jquery/ex3/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     />
-    <title>EX2 Fetch</title>
+    <title>EX3 XMLHttprequest</title>
   </head>
   <body>
     <div class="container mt-5">
