--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
                     <a href="./ajax-jquery/ex3/">EX3 XMLHttprequest</a>
                   </button>
                 </td>
-                <td>x</td>
+                <td>
+                  <button type="button" class="btn btn-light border">
+                    <a href="./woocommerce/ex1/"
+                      >Ajax Loop Product & Filtering</a
+                    >
+                  </button>
+                </td>
                 <td>x</td>
                 <td>x</td>
               </tr>
