--- a/index.html
+++ b/index.html
@@ -19,34 +19,30 @@
           <table class="table table-bordered">
             <thead class="thead-light">
               <tr>
-                <th>Ajax Jquery</th>
-                <th>Woocommerce</th>
-                <th>PHP</th>
-                <th>OV Motive</th>
+                <th>WordPress API</th>
+                <th>Woocommerce API</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>
-                  <button type="button" class="btn btn-light border">
-                    <a href="./ajax-jquery/ex1/">EX1 Ajax</a>
-                  </button>
-                  <button type="button" class="btn btn-light border">
-                    <a href="./ajax-jquery/ex2/">EX2 Fetch</a>
-                  </button>
-                  <button type="button" class="btn btn-light border">
-                    <a href="./ajax-jquery/ex3/">EX3 XMLHttprequest</a>
-                  </button>
+                  <a class="btn btn-light border" href="./WordPress-API/Ajax/"
+                    >Ajax</a
+                  >
+                  <a class="btn btn-light border" href="./WordPress-API/Fetch/"
+                    >Fetch</a
+                  >
+                  <a
+                    class="btn btn-light border"
+                    href="./WordPress-API/XMLHttprequest/"
+                    >XMLHttprequest</a
+                  >
                 </td>
                 <td>
-                  <button type="button" class="btn btn-light border">
-                    <a href="./woocommerce/ex1/"
-                      >Ajax Loop Product & Filtering</a
-                    >
-                  </button>
+                  <a class="btn btn-light border" href="./woocommerce/ex1/"
+                    >Ajax Loop Product & Filtering</a
+                  >
                 </td>
-                <td>x</td>
-                <td>x</td>
               </tr>
             </tbody>
           </table>
