--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <tbody>
               <tr>
                 <td>
-                  <a class="btn btn-light border" href="./WordPress-API/Ajax/"
+                  <a class="btn btn-light border" href="./wordpress-api/ajax/"
                     >Ajax</a
                   >
-                  <a class="btn btn-light border" href="./WordPress-API/Fetch/"
+                  <a class="btn btn-light border" href="./wordpress-api/fetch/"
                     >Fetch</a
                   >
                   <a
                     class="btn btn-light border"
-                    href="./WordPress-API/XMLHttprequest/"
+                    href="./wordpress-api/xmlhttprequest/"
                     >XMLHttprequest</a
                   >
                 </td>
