--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
                   >
                 </td>
                 <td>
-                  <a class="btn btn-light border" href="./woocommerce/ex1/"
-                    >Ajax Loop Product & Filtering</a
+                  <a
+                    class="btn btn-light border"
+                    href="./woocommerce-api/products/"
+                    >Products</a
                   >
                 </td>
               </tr>
