--- a/index.html
+++ b/index.html
@@ -21,30 +21,67 @@
               <tr>
                 <th>WordPress API</th>
                 <th>Woocommerce API</th>
+                <th>Blogger API</th>
               </tr>
             </thead>
             <tbody>
               <tr>
                 <td>
-                  <a class="btn btn-light border" href="./wordpress-api/ajax/"
+                  <a
+                    class="btn btn-light border mb-1"
+                    href="./wordpress-api/ajax/"
                     >Ajax</a
                   >
-                  <a class="btn btn-light border" href="./wordpress-api/fetch/"
+                  <a
+                    class="btn btn-light border mb-1"
+                    href="./wordpress-api/fetch/"
                     >Fetch</a
                   >
                   <a
-                    class="btn btn-light border"
+                    class="btn btn-light border mb-1"
                     href="./wordpress-api/xmlhttprequest/"
                     >XMLHttprequest</a
                   >
                 </td>
                 <td>
                   <a
-                    class="btn btn-light border"
+                    class="btn btn-light border mb-1"
                     href="./woocommerce-api/products/"
                     >Products</a
                   >
                 </td>
+                <td>x</td>
+              </tr>
+              <tr>
+                <td>
+                  <a
+                    class="btn btn-light border mb-1"
+                    href="./wordpress-api/ajax/"
+                    >Posts</a
+                  >
+                  <a
+                    class="btn btn-light border mb-1"
+                    href="./wordpress-api/ajax/"
+                    >Archive</a
+                  >
+                  <a
+                    class="btn btn-light border mb-1"
+                    href="./wordpress-api/ajax/"
+                    >Author</a
+                  >
+                  <a
+                    class="btn btn-light border mb-1"
+                    href="./wordpress-api/ajax/"
+                    >Tag</a
+                  >
+                  <a
+                    class="btn btn-light border mb-1"
+                    href="./wordpress-api/ajax/"
+                    >Mail</a
+                  >
+                </td>
+                <td>x</td>
+                <td>x</td>
               </tr>
             </tbody>
           </table>
