--- a/index.html
+++ b/index.html
@@ -56,28 +56,8 @@
                 <td>
                   <a
                     class="btn btn-light border mb-1"
-                    href="./wordpress-api/ajax/"
+                    href="./wordpress-api/posts/"
                     >Posts</a
-                  >
-                  <a
-                    class="btn btn-light border mb-1"
-                    href="./wordpress-api/ajax/"
-                    >Archive</a
-                  >
-                  <a
-                    class="btn btn-light border mb-1"
-                    href="./wordpress-api/ajax/"
-                    >Author</a
-                  >
-                  <a
-                    class="btn btn-light border mb-1"
-                    href="./wordpress-api/ajax/"
-                    >Tag</a
-                  >
-                  <a
-                    class="btn btn-light border mb-1"
-                    href="./wordpress-api/ajax/"
-                    >Mail</a
                   >
                 </td>
                 <td>x</td>
