add search page

--- a/index.html
+++ b/index.html
@@ -54,10 +54,8 @@
               </tr>
               <tr>
                 <td>
-                  <a
-                    class="btn btn-light border mb-1"
-                    href="./wordpress-api/posts/"
-                    >Posts</a
+                  <a class="btn btn-light border mb-1" href="./search/"
+                    >Search</a
                   >
                 </td>
                 <td>x</td>
