--- a/search/index.html
+++ b/search/index.html
@@ -5,97 +5,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WordPress Crawlers</title>
     <link rel="icon" href="/favicon-gaco.png" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body >
-    <div  class="container mt-5">
-      <h1 class="">WordPress Crawlers</h1>
-      
-
-      <!-- /**form
-
-      */ -->
-      <form action="/search/results/" method="GET" id="form">
-        <div class="form-group">
-          <div class="row">
-            <div class="col-4">
-              <label for="url">Tên Miền Muốn Crawl</label>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon3"
-                    >https://</span
-                  >
-                </div>
-                <input
-                  type="text"
-                  name="furl"
-                  id="url"
-                  class="form-control"
-                  placeholder="tenmien.com..."
-                  required
-                />
+  <body class="p-3">
+    <div
+      class="wrapper container h-100 d-flex align-items-center justify-content-center"
+    >
+      <div class="row">
+        <div class="brand text-center mb-4">
+          <h1 class="col-sm-12">
+            <img
+              src="/img/WordPress-logotype-wmark.webp"
+              alt="wordpress-search"
+              style="width: 99px !important; height: auto !important"
+            />WordPress Search
+          </h1>
+        </div>
+        <form class="" action="/search/results/" method="GET" id="form">
+          <div class="col-sm-12">
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" id="basic-addon3">https://</span>
               </div>
-            </div>
-            <div class="col-4">
-              <label for="number">Số bài viết:</label>
               <input
-                type="number"
-                name="fnumber"
+                type="text"
+                name="furl"
+                id="url"
                 class="form-control"
-                value="20"
-                id="number"
+                placeholder="thanhcong.com"
                 required
               />
             </div>
-            <div class="col-4">
-              <label for="ajaxFormIS" style="visibility: hidden"
-                >Số bài viết:</label
-              >
-              <input
-                id="ajaxFormIS"
-                class="btn btn-primary btn-block"
-                type="submit"
-                value="Submit"
-              />
-            </div>
           </div>
-        </div>
-        <div class="form-group"></div>
-      </form>
-      <!-- /**form
-        
-      */ -->
-
-      <!-- <div class="" id="result"> -->
-        <!-- <table class="table table-bordered"> -->
-          <!-- this will show our spinner -->
-          <!-- <div id="spinner"></div>
-          <thead class="thead-light">
-            <tr>
-              <th class="col-7">Tiêu Đề</th>
-
-              <th class="col-1">ID</th>
-              <th class="col-2">URL SLUG</th>
-
-              <th class="col-2">Ngày Đăng</th>
-            </tr>
-          </thead>
-          <tbody id="data"></tbody>
-        </table> -->
+          <div class="input-group">
+            <input
+              type="number"
+              name="fnumber"
+              class="form-control"
+              placeholder="Số bài viết..."
+              value="20"
+              id="number"
+              required
+            />
+            <button class="btn btn-primary btn-block">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-search"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                />
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </body>
 
   <!-- Main JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/fetch.js"></script>
 
   <!-- Boostrap -->
   <script
@@ -103,6 +76,4 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"
   ></script>
-
-  
 </html>
