--- a/search/results/index.html
+++ b/search/results/index.html
@@ -5,12 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kết quả tìm kiếm</title>
     <link rel="icon" href="/img/favicon-gaco.png" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="/search/css/main.css" />
   </head>
   <body>
@@ -18,59 +12,8 @@
       <h1 class="">Kết Quả</h1>
       <p style="color: #007bff" id="p1"></p>
       <p style="color: #007bff" id="p2"></p>
-      <!-- /**form
 
-      */ -->
-      <!-- <form action="/search/results/" method="POST" id="form">
-        <div class="form-group">
-          <div class="row">
-            <div class="col-4">
-              <label for="url">Tên Miền Muốn Crawl</label>
-              <div class="input-group mb-3">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon3"
-                    >https://</span
-                  >
-                </div>
-                <input
-                  type="text"
-                  name="furl"
-                  id="url"
-                  class="form-control"
-                  placeholder="tenmien.com..."
-                  required
-                />
-              </div>
-            </div>
-            <div class="col-4">
-              <label for="number">Số bài viết:</label>
-              <input
-                type="number"
-                name="fnumber"
-                class="form-control"
-                value="20"
-                id="number"
-                required
-              />
-            </div>
-            <div class="col-4">
-              <label for="ajaxFormIS" style="visibility: hidden"
-                >Số bài viết:</label
-              >
-              <input
-                id="ajaxFormIS"
-                class="btn btn-primary btn-block"
-                type="submit"
-                value="Submit"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="form-group"></div>
-      </form> -->
-      <!-- /**form
-        
-      */ -->
+      <!-- result -->
       <div class="" id="result">
         <table class="table table-bordered">
           <!-- this will show our spinner -->
@@ -78,10 +21,8 @@
           <thead class="thead-light">
             <tr>
               <th class="col-7">Tiêu Đề</th>
-
               <th class="col-1">ID</th>
-              <th class="col-2">URL SLUG</th>
-
+              <th class="col-2">Nguồn</th>
               <th class="col-2">Ngày Đăng</th>
             </tr>
           </thead>
@@ -94,7 +35,6 @@
   <!-- Main JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="/search/results/fetch.js"></script>
-
   <!-- Boostrap -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
