--- a/search/index.html
+++ b/search/index.html
@@ -12,14 +12,19 @@
       class="wrapper container h-100 d-flex align-items-center justify-content-center"
     >
       <div class="row">
-        <div class="brand text-center mb-4">
-          <h1 class="col-sm-12">
-            <img
-              src="/img/WordPress-logotype-wmark.webp"
-              alt="wordpress-search"
-              style="width: 99px !important; height: auto !important"
-            />WordPress Search
-          </h1>
+        <div class="brand mb-4">
+          <div class="row align-items-center">
+            <div class="wp-img col">
+              <img
+                src="/img/WordPress-logotype-wmark.webp"
+                alt="wordpress-search"
+                style="width: auto !important; height: 110px !important"
+              />
+            </div>
+            <div class="wp-h1 col">
+              <h1 class="">WordPress Search</h1>
+            </div>
+          </div>
         </div>
         <form class="" action="/search/results/" method="GET" id="form">
           <div class="col-sm-12">
