--- a/search/index.html
+++ b/search/index.html
@@ -26,48 +26,57 @@
             </div>
           </div>
         </div>
-        <form class="" action="/search/results/" method="GET" id="form">
-          <div class="col-sm-12">
-            <div class="input-group mb-3">
+        <div class="col">
+          <form action="/search/results/" method="GET" id="form">
+            <div class="input-group">
               <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon3">https://</span>
+                <span
+                  class="input-group-text"
+                  style="height: 55px"
+                  id="basic-addon3"
+                  >https://</span
+                >
               </div>
-              <input
-                type="text"
-                name="furl"
-                id="url"
-                class="form-control"
-                placeholder="thanhcong.com"
-                required
-              />
-            </div>
-          </div>
-          <div class="input-group">
-            <input
-              type="number"
-              name="fnumber"
-              class="form-control"
-              placeholder="Số bài viết..."
-              value="20"
-              id="number"
-              required
-            />
-            <button class="btn btn-primary btn-block">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                fill="currentColor"
-                class="bi bi-search"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+              <div class="col-lg">
+                <input
+                  style="height: 55px"
+                  type="text"
+                  name="furl"
+                  id="url"
+                  class="form-control"
+                  placeholder="thanhcong.com"
+                  required
                 />
-              </svg>
-            </button>
-          </div>
-        </form>
+              </div>
+              <div class="col-xs-2">
+                <input
+                  style="height: 55px"
+                  type="number"
+                  name="fnumber"
+                  class="form-control"
+                  placeholder="Số bài viết..."
+                  value=""
+                  id="number"
+                  required
+                />
+              </div>
+              <button class="btn btn-primary btn-block">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="16"
+                  height="16"
+                  fill="currentColor"
+                  class="bi bi-search"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                  />
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </body>
