--- a/search/queries/index.html
+++ b/search/queries/index.html
@@ -8,18 +8,54 @@
     <link rel="stylesheet" href="../css/main.css" />
   </head>
   <body>
-    <div class="container mt-5 border">
-      <div class="row text-center">
-        <div class="col-6 border"><p id="loadName"></p></div>
-        <div class="col-6 border">
-          <div class="" id="loadID"></div>
+    <header class="d-flex bg-dark bg-gradient">
+      <div
+        class="container d-flex align-items-center justify-content-between"
+        style="height: 50px; width: 900px"
+      >
+        <span class="text-light" id="">
+          <button type="button" class="btn btn-link" onclick="history.back()">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              class="bi bi-box-arrow-in-left"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M10 3.5a.5.5 0 0 0-.5-.5h-8a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h8a.5.5 0 0 0 .5-.5v-2a.5.5 0 0 1 1 0v2A1.5 1.5 0 0 1 9.5 14h-8A1.5 1.5 0 0 1 0 12.5v-9A1.5 1.5 0 0 1 1.5 2h8A1.5 1.5 0 0 1 11 3.5v2a.5.5 0 0 1-1 0v-2z"
+              />
+              <path
+                fill-rule="evenodd"
+                d="M4.146 8.354a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H14.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3z"
+              />
+            </svg>
+          </button>
+        </span>
+        <span id="time"
+          ><a class="text-light" style="text-decoration: none" href="/search"
+            >Home</a
+          ></span
+        >
+      </div>
+    </header>
+    <main id="main">
+      <div class="content mt-5 mb-5 p-3">
+        <div id="contentDisplay" class="container" style="min-height: 80vh">
+          <div id="spinner"></div>
         </div>
       </div>
-    </div>
-
-    <div id="contentDisplay" class="container mt-5">
-      <div id="spinner"></div>
-    </div>
+    </main>
+    <footer class="footer d-flex bg-dark bg-gradient">
+      <div
+        class="absolute-footer container d-flex align-items-center justify-content-center"
+        style="height: 50px"
+      >
+        <span class="text-light" id="loadSource"></span>
+      </div>
+    </footer>
   </body>
   <!-- Main JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
